# reolink-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
completion/: reolink.bash  reolink.zsh
docs/: PLAN.md
reolink_cli/: __init__.py  __main__.py  cli.py  client.py  output.py
reolink_cli/commands/: __init__.py  alerts.py  controls.py  detection.py  device.py  media.py  system.py
tests/: conftest.py  test_client.py  test_commands.py  test_output.py
