[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reolink-cli"
version = "0.1.0"
description = "Command-line interface for controlling Reolink cameras"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ben Wickham"},
]
keywords = ["reolink", "camera", "security", "cli", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
]

[project.scripts]
reolink = "reolink_cli.cli:main"

[project.urls]
Homepage = "https://github.com/benwickham/reolink-cli"
Repository = "https://github.com/benwickham/reolink-cli"
Issues = "https://github.com/benwickham/reolink-cli/issues"

[tool.setuptools.packages.find]
include = ["reolink_cli*"]
